--- a/arch/arm64/configs/bcm2711_defconfig
+++ b/arch/arm64/configs/bcm2711_defconfig
@@ -646,27 +646,27 @@ CONFIG_JOYSTICK_PSXPAD_SPI_FF=y
 CONFIG_JOYSTICK_FSIA6B=m
 CONFIG_JOYSTICK_RPISENSE=m
 CONFIG_INPUT_TOUCHSCREEN=y
-CONFIG_TOUCHSCREEN_ADS7846=m
-CONFIG_TOUCHSCREEN_EGALAX=m
-CONFIG_TOUCHSCREEN_EXC3000=m
-CONFIG_TOUCHSCREEN_GOODIX=m
-CONFIG_TOUCHSCREEN_ILI210X=m
-CONFIG_TOUCHSCREEN_EDT_FT5X06=m
-CONFIG_TOUCHSCREEN_RASPBERRYPI_FW=m
-CONFIG_TOUCHSCREEN_USB_COMPOSITE=m
-CONFIG_TOUCHSCREEN_STMPE=m
-CONFIG_TOUCHSCREEN_IQS5XX=m
+CONFIG_TOUCHSCREEN_ADS7846=y
+CONFIG_TOUCHSCREEN_EGALAX=y
+CONFIG_TOUCHSCREEN_EXC3000=y
+CONFIG_TOUCHSCREEN_GOODIX=y
+CONFIG_TOUCHSCREEN_ILI210X=y
+CONFIG_TOUCHSCREEN_EDT_FT5X06=y
+CONFIG_TOUCHSCREEN_RASPBERRYPI_FW=y
+CONFIG_TOUCHSCREEN_USB_COMPOSITE=y
+CONFIG_TOUCHSCREEN_STMPE=y
+CONFIG_TOUCHSCREEN_IQS5XX=y
 CONFIG_INPUT_MISC=y
-CONFIG_INPUT_AD714X=m
-CONFIG_INPUT_ATI_REMOTE2=m
-CONFIG_INPUT_KEYSPAN_REMOTE=m
-CONFIG_INPUT_POWERMATE=m
-CONFIG_INPUT_YEALINK=m
-CONFIG_INPUT_CM109=m
-CONFIG_INPUT_UINPUT=m
-CONFIG_INPUT_GPIO_ROTARY_ENCODER=m
-CONFIG_INPUT_ADXL34X=m
-CONFIG_INPUT_CMA3000=m
+CONFIG_INPUT_AD714X=y
+CONFIG_INPUT_ATI_REMOTE2=y
+CONFIG_INPUT_KEYSPAN_REMOTE=y
+CONFIG_INPUT_POWERMATE=y
+CONFIG_INPUT_YEALINK=y
+CONFIG_INPUT_CM109=y
+CONFIG_INPUT_UINPUT=y
+CONFIG_INPUT_GPIO_ROTARY_ENCODER=y
+CONFIG_INPUT_ADXL34X=y
+CONFIG_INPUT_CMA3000=y
 CONFIG_SERIO=m
 CONFIG_SERIO_RAW=m
 CONFIG_GAMEPORT=m
@@ -697,36 +697,36 @@ CONFIG_HW_RANDOM=y
 CONFIG_TCG_TPM=m
 CONFIG_TCG_TIS_SPI=m
 CONFIG_I2C=y
-CONFIG_I2C_CHARDEV=m
-CONFIG_I2C_MUX_GPMUX=m
-CONFIG_I2C_MUX_PCA954x=m
-CONFIG_I2C_MUX_PINCTRL=m
-CONFIG_I2C_BCM2708=m
-CONFIG_I2C_BCM2835=m
-CONFIG_I2C_BRCMSTB=m
-CONFIG_I2C_GPIO=m
-CONFIG_I2C_ROBOTFUZZ_OSIF=m
-CONFIG_I2C_TINY_USB=m
+CONFIG_I2C_CHARDEV=y
+CONFIG_I2C_MUX_GPMUX=y
+CONFIG_I2C_MUX_PCA954x=y
+CONFIG_I2C_MUX_PINCTRL=y
+CONFIG_I2C_BCM2708=y
+CONFIG_I2C_BCM2835=y
+CONFIG_I2C_BRCMSTB=y
+CONFIG_I2C_GPIO=y
+CONFIG_I2C_ROBOTFUZZ_OSIF=y
+CONFIG_I2C_TINY_USB=y
 CONFIG_SPI=y
-CONFIG_SPI_BCM2835=m
-CONFIG_SPI_BCM2835AUX=m
-CONFIG_SPI_GPIO=m
-CONFIG_SPI_SPIDEV=m
+CONFIG_SPI_BCM2835=y
+CONFIG_SPI_BCM2835AUX=y
+CONFIG_SPI_GPIO=y
+CONFIG_SPI_SPIDEV=y
 CONFIG_SPI_SLAVE=y
-CONFIG_PPS_CLIENT_LDISC=m
-CONFIG_PPS_CLIENT_GPIO=m
-CONFIG_PINCTRL_MCP23S08=m
+CONFIG_PPS_CLIENT_LDISC=y
+CONFIG_PPS_CLIENT_GPIO=y
+CONFIG_PINCTRL_MCP23S08=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_BCM_VIRT=y
-CONFIG_GPIO_MAX7300=m
-CONFIG_GPIO_PCA953X=m
+CONFIG_GPIO_MAX7300=y
+CONFIG_GPIO_PCA953X=y
 CONFIG_GPIO_PCA953X_IRQ=y
-CONFIG_GPIO_PCF857X=m
-CONFIG_GPIO_ARIZONA=m
-CONFIG_GPIO_FSM=m
+CONFIG_GPIO_PCF857X=y
+CONFIG_GPIO_ARIZONA=y
+CONFIG_GPIO_FSM=y
 CONFIG_GPIO_STMPE=y
-CONFIG_GPIO_MAX7301=m
-CONFIG_GPIO_MOCKUP=m
+CONFIG_GPIO_MAX7301=y
+CONFIG_GPIO_MOCKUP=y
 CONFIG_W1=m
 CONFIG_W1_MASTER_DS2490=m
 CONFIG_W1_MASTER_DS2482=m
@@ -778,10 +778,10 @@ CONFIG_MFD_ARIZONA_SPI=m
 CONFIG_MFD_WM5102=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
-CONFIG_REGULATOR_ARIZONA_LDO1=m
-CONFIG_REGULATOR_ARIZONA_MICSUPP=m
+CONFIG_REGULATOR_ARIZONA_LDO1=y
+CONFIG_REGULATOR_ARIZONA_MICSUPP=y
 CONFIG_REGULATOR_GPIO=y
-CONFIG_REGULATOR_RASPBERRYPI_TOUCHSCREEN_ATTINY=m
+CONFIG_REGULATOR_RASPBERRYPI_TOUCHSCREEN_ATTINY=y
 CONFIG_RC_CORE=y
 CONFIG_LIRC=y
 CONFIG_BPF_LIRC_MODE2=y
@@ -864,25 +864,25 @@ CONFIG_USB_GSPCA_VICAM=m
 CONFIG_USB_GSPCA_XIRLINK_CIT=m
 CONFIG_USB_GSPCA_ZC3XX=m
 CONFIG_USB_PWC=m
-CONFIG_VIDEO_CPIA2=m
+CONFIG_VIDEO_CPIA2=y
 CONFIG_USB_ZR364XX=m
 CONFIG_USB_STKWEBCAM=m
 CONFIG_USB_S2255=m
-CONFIG_VIDEO_USBTV=m
-CONFIG_VIDEO_PVRUSB2=m
-CONFIG_VIDEO_HDPVR=m
-CONFIG_VIDEO_STK1160_COMMON=m
-CONFIG_VIDEO_GO7007=m
-CONFIG_VIDEO_GO7007_USB=m
-CONFIG_VIDEO_GO7007_USB_S2250_BOARD=m
-CONFIG_VIDEO_AU0828=m
+CONFIG_VIDEO_USBTV=y
+CONFIG_VIDEO_PVRUSB2=y
+CONFIG_VIDEO_HDPVR=y
+CONFIG_VIDEO_STK1160_COMMON=y
+CONFIG_VIDEO_GO7007=y
+CONFIG_VIDEO_GO7007_USB=y
+CONFIG_VIDEO_GO7007_USB_S2250_BOARD=y
+CONFIG_VIDEO_AU0828=y
 CONFIG_VIDEO_AU0828_RC=y
-CONFIG_VIDEO_CX231XX=m
-CONFIG_VIDEO_CX231XX_ALSA=m
-CONFIG_VIDEO_CX231XX_DVB=m
-CONFIG_VIDEO_TM6000=m
-CONFIG_VIDEO_TM6000_ALSA=m
-CONFIG_VIDEO_TM6000_DVB=m
+CONFIG_VIDEO_CX231XX=y
+CONFIG_VIDEO_CX231XX_ALSA=y
+CONFIG_VIDEO_CX231XX_DVB=y
+CONFIG_VIDEO_TM6000=y
+CONFIG_VIDEO_TM6000_ALSA=y
+CONFIG_VIDEO_TM6000_DVB=y
 CONFIG_DVB_USB=m
 CONFIG_DVB_USB_A800=m
 CONFIG_DVB_USB_DIBUSB_MB=m
@@ -924,10 +924,10 @@ CONFIG_DVB_USB_DVBSKY=m
 CONFIG_SMS_USB_DRV=m
 CONFIG_DVB_B2C2_FLEXCOP_USB=m
 CONFIG_DVB_AS102=m
-CONFIG_VIDEO_EM28XX=m
-CONFIG_VIDEO_EM28XX_V4L2=m
-CONFIG_VIDEO_EM28XX_ALSA=m
-CONFIG_VIDEO_EM28XX_DVB=m
+CONFIG_VIDEO_EM28XX=y
+CONFIG_VIDEO_EM28XX_V4L2=y
+CONFIG_VIDEO_EM28XX_ALSA=y
+CONFIG_VIDEO_EM28XX_DVB=y
 CONFIG_RADIO_SI470X=m
 CONFIG_USB_SI470X=m
 CONFIG_I2C_SI470X=m
@@ -945,39 +945,39 @@ CONFIG_RADIO_TEF6862=m
 CONFIG_RADIO_WL1273=m
 CONFIG_RADIO_WL128X=m
 CONFIG_V4L_PLATFORM_DRIVERS=y
-CONFIG_VIDEO_MUX=m
-CONFIG_VIDEO_BCM2835_UNICAM=m
+CONFIG_VIDEO_MUX=y
+CONFIG_VIDEO_BCM2835_UNICAM=y
 CONFIG_V4L_TEST_DRIVERS=y
-CONFIG_VIDEO_VIMC=m
-CONFIG_VIDEO_VIVID=m
-CONFIG_VIDEO_VIM2M=m
-CONFIG_VIDEO_VICODEC=m
-CONFIG_VIDEO_UDA1342=m
-CONFIG_VIDEO_SONY_BTF_MPX=m
-CONFIG_VIDEO_ADV7180=m
-CONFIG_VIDEO_TC358743=m
-CONFIG_VIDEO_TVP5150=m
-CONFIG_VIDEO_TW2804=m
-CONFIG_VIDEO_TW9903=m
-CONFIG_VIDEO_TW9906=m
-CONFIG_VIDEO_ARDUCAM_64MP=m
-CONFIG_VIDEO_ARDUCAM_PIVARIETY=m
-CONFIG_VIDEO_IMX219=m
-CONFIG_VIDEO_IMX258=m
-CONFIG_VIDEO_IMX290=m
-CONFIG_VIDEO_IMX296=m
-CONFIG_VIDEO_IMX477=m
-CONFIG_VIDEO_IMX519=m
-CONFIG_VIDEO_IMX708=m
-CONFIG_VIDEO_OV2311=m
-CONFIG_VIDEO_OV5647=m
-CONFIG_VIDEO_OV7251=m
-CONFIG_VIDEO_OV7640=m
-CONFIG_VIDEO_OV9281=m
-CONFIG_VIDEO_IRS1125=m
-CONFIG_VIDEO_MT9V011=m
-CONFIG_VIDEO_AD5398=m
-CONFIG_VIDEO_DW9807_VCM=m
+CONFIG_VIDEO_VIMC=y
+CONFIG_VIDEO_VIVID=y
+CONFIG_VIDEO_VIM2M=y
+CONFIG_VIDEO_VICODEC=y
+CONFIG_VIDEO_UDA1342=y
+CONFIG_VIDEO_SONY_BTF_MPX=y
+CONFIG_VIDEO_ADV7180=y
+CONFIG_VIDEO_TC358743=y
+CONFIG_VIDEO_TVP5150=y
+CONFIG_VIDEO_TW2804=y
+CONFIG_VIDEO_TW9903=y
+CONFIG_VIDEO_TW9906=y
+CONFIG_VIDEO_ARDUCAM_64MP=y
+CONFIG_VIDEO_ARDUCAM_PIVARIETY=y
+CONFIG_VIDEO_IMX219=y
+CONFIG_VIDEO_IMX258=y
+CONFIG_VIDEO_IMX290=y
+CONFIG_VIDEO_IMX296=y
+CONFIG_VIDEO_IMX477=y
+CONFIG_VIDEO_IMX519=y
+CONFIG_VIDEO_IMX708=y
+CONFIG_VIDEO_OV2311=y
+CONFIG_VIDEO_OV5647=y
+CONFIG_VIDEO_OV7251=y
+CONFIG_VIDEO_OV7640=y
+CONFIG_VIDEO_OV9281=y
+CONFIG_VIDEO_IRS1125=y
+CONFIG_VIDEO_MT9V011=y
+CONFIG_VIDEO_AD5398=y
+CONFIG_VIDEO_DW9807_VCM=y
 CONFIG_DRM=y
 CONFIG_DRM_LOAD_EDID_FIRMWARE=y
 CONFIG_DRM_UDL=y
@@ -1005,14 +1005,14 @@ CONFIG_TINYDRM_ST7735R=y
 CONFIG_DRM_GUD=y
 CONFIG_FB=y
 CONFIG_FB_BCM2708=y
-CONFIG_FB_UDL=m
+CONFIG_FB_UDL=y
 CONFIG_FB_SIMPLE=y
-CONFIG_FB_SSD1307=m
-CONFIG_FB_RPISENSE=m
-CONFIG_BACKLIGHT_PWM=m
-CONFIG_BACKLIGHT_RPI=m
-CONFIG_BACKLIGHT_LM3630A=m
-CONFIG_BACKLIGHT_GPIO=m
+CONFIG_FB_SSD1307=y
+CONFIG_FB_RPISENSE=y
+CONFIG_BACKLIGHT_PWM=y
+CONFIG_BACKLIGHT_RPI=y
+CONFIG_BACKLIGHT_LM3630A=y
+CONFIG_BACKLIGHT_GPIO=y
 CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_FRAMEBUFFER_CONSOLE_ROTATION=y
 CONFIG_LOGO=y
@@ -1379,7 +1379,7 @@ CONFIG_R8188EU=m
 CONFIG_88EU_AP_MODE=y
 CONFIG_VT6656=m
 CONFIG_STAGING_MEDIA=y
-CONFIG_VIDEO_RPIVID=m
+CONFIG_VIDEO_RPIVID=y
 CONFIG_ASHMEM=y
 CONFIG_FB_TFT=m
 CONFIG_FB_TFT_AGM1264K_FL=m
@@ -1413,9 +1413,9 @@ CONFIG_FB_TFT_UPD161704=m
 CONFIG_FB_TFT_WATTEROTT=m
 CONFIG_BCM2835_VCHIQ=y
 CONFIG_SND_BCM2835=m
-CONFIG_VIDEO_BCM2835=m
-CONFIG_VIDEO_CODEC_BCM2835=m
-CONFIG_VIDEO_ISP_BCM2835=m
+CONFIG_VIDEO_BCM2835=y
+CONFIG_VIDEO_CODEC_BCM2835=y
+CONFIG_VIDEO_ISP_BCM2835=y
 CONFIG_CLK_RASPBERRYPI=y
 CONFIG_MAILBOX=y
 CONFIG_BCM2835_MBOX=y
@@ -1447,7 +1447,6 @@ CONFIG_BMP280=m
 CONFIG_MS5637=m
 CONFIG_MAXIM_THERMOCOUPLE=m
 CONFIG_MAX31856=m
-CONFIG_PWM=y
 CONFIG_PWM_BCM2835=m
 CONFIG_PWM_PCA9685=m
 CONFIG_PWM_RASPBERRYPI_POE=m
@@ -1643,4 +1642,4 @@ CONFIG_PERF_EVENTS=y
 CONFIG_GPIOLIB=y
 CONFIG_DEBUG_FS=y
 CONFIG_MMU=y
-CONFIG_LOG_BUF_SHIFT=25
+CONFIG_DMATEST=y
